--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "http": "0.0.1-security",
+    "mongoose": "^5.9.19",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "uuid": "^8.1.0"
