--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "http": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.19",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "uuid": "^8.1.0"
   }
 }
