--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_URI=mongodb+srv://C_S:C1818@cluster0-bhlmy.mongodb.net/myFlixDB?retryWrites=true&w=majority
+DB_URI=mongodb+srv://C_S:akWrSvUsTDXLtee0@cluster0-bhlmy.mongodb.net/myFlixDB?retryWrites=true&w=majority
