--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "cssnano": "^4.1.10",
     "flow-bin": "^0.130.0",
     "jest": "^26.1.0",
     "sass": "^1.26.10"
