deploy client to heroku

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "flow": "flow"
+    "flow": "flow",
+    "start": "node index.js"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -13,6 +14,7 @@
     "axios": "^0.19.2",
     "components": "^0.1.0",
     "prop-types": "^15.7.2",
+    "react": "^17.0.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
